whoami/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: containous/whoami:v1.5.0
        imagePullPolicy: IfNotPresent
        name: whoami
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "5Mi"
            cpu: "10m"
      restartPolicy: Always
