whoami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
  - port: 80 #port to export outwards
    protocol: TCP
    targetPort: 80 #port to target on pod
  selector:
    app: whoami
